IBX-2415: Fix bell icon alignment in the header

--- a/src/bundle/Resources/public/scss/_header-user-menu.scss
+++ b/src/bundle/Resources/public/scss/_header-user-menu.scss
@@ -1,6 +1,7 @@
 .ibexa-header-user-menu {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 
     &__popup-menu {
         z-index: 1060;
@@ -50,6 +51,8 @@
         display: flex;
         align-items: flex-end;
         position: relative;
+        height: calculateRem(24px);
+        padding-bottom: calculateRem(4px);
         padding-bottom: calculateRem(4px);
         cursor: pointer;
     }
@@ -63,7 +66,7 @@
         cursor: pointer;
         position: absolute;
         left: calculateRem(10px);
-        top: calculateRem(10px);
+        top: 0;
 
         &--no-notice {
             opacity: 0;
